tests/semantic/fail/assignment3.tiger
let
	var x : int := 1
in
  x := "a"
end
